Ajout dde la methode delete